--- a/src/app/pages/add/add.page.scss
+++ b/src/app/pages/add/add.page.scss
@@ -4,33 +4,33 @@
 
 
   .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
 
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  height: 100%;
-  background: #E7E7EC;
-}
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    height: 100%;
+    background: #E7E7EC;
+  }
 
-.swiper-slide img {
-  display: block;
-  // width: 100%;
-  // height: 100%;
-  object-fit: cover;
-}
+  .swiper-slide img {
+    display: block;
+    // width: 100%;
+    // height: 100%;
+    object-fit: cover;
+  }
 }
 
 .header-image {
@@ -53,32 +53,57 @@
 }
 
 .container {
-  padding: 16px 16px 32px;
-
-
+  padding: 16px 16px 0px;
   color: var(--dark-text);
 
+  .addForm {
 
 
+    p {
+      color: var(--dark-text);
+      font-family: 'bold';
+      margin-top: 0;
+    }
 
-  p {
-    color: var(--dark-text);
-    font-family: 'bold';
-    margin-top: 0;
-  }
+    .item_box {
+      border: 1px solid #87899E;
+      border-radius: 8px;
+      margin-bottom: 24px;
+      height: 44px;
 
-  .item_box {
-    border: 1px solid #87899E;
-    border-radius: 8px;
-    margin-bottom: 24px;
-    height: 44px;
+      ion-select {
+        --placeholder-color: var(--light-text);
+        --placeholder-opacity: 100%;
+      }
 
-    ion-select {
-      --placeholder-color: var(--light-text);
-      --placeholder-opacity: 100%;
+
+    }
+
+    .item_boxLocation {
+
+      display: flex;
+      justify-content: space-around;
+      font-size: 14px;
+      margin-bottom: 18px;
+
+      .selectionBox {
+        padding: 12px 16px;
+        border: 1px solid #87899E;
+        border-radius: 8px;
+        // width: 35%;
+        transition: all .2;
+        text-align: center;
+        font-family: 'bold';
+        color: #87899E;
+      }
+
+      .active {
+        border: 1px solid var(--ion-color-primary) !important;
+        color: var(--ion-color-primary) !important;
+        background: #2a6fdb26;
+      }
     }
   }
-
 
 }
 
@@ -92,4 +117,71 @@ ion-footer {
     margin-block: 12px;
   }
 
+}
+
+
+ion-modal.modal-map {
+  // width: 90%;
+ // height: 60%;
+ // margin: auto;
+ // border-radius: 16px;
+}
+
+ion-modal {
+  --height: 60%;
+  --width: 90%;
+  --border-radius: 16px;
+  --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+
+  ion-title {
+    font-family: 'bold';
+  }
+
+  ion-list {
+
+    ion-item {
+      margin-top: 16px;
+
+      ion-icon {
+        font-size: 26px;
+        margin-inline: 16px
+      }
+
+      .info {
+        h2 {
+          font-size: 16px;
+          margin: 0;
+        }
+
+        p {
+          margin: 0;
+          font-family: 'bold';
+        }
+      }
+    }
+
+    ion-button {
+      margin-top: 60px;
+      height: 46px;
+      border-radius: 8px;
+      --border-radius: 8px;
+      font-family: 'bold';
+      border: 1px solid var(--ion-color-primary);
+      font-size: 14px;
+      line-height: 26px;
+      margin-inline: 12px;
+      color: var(--ion-color-primary);
+    }
+  }
+
+}
+
+ion-modal::part(backdrop) {
+  background: rgb(50 51 52);
+  opacity: 1;
+}
+
+ion-modal ion-toolbar {
+  --background: var(--ion-color-primary);
+  --color: white;
 }
