--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div class="item_box animate__animated animate__fadeInBottomLeft duration">
+      <div class="item_box animate__animated animate__fadeInBottomLeft duration" (click)="navigate()">
         <div class="image">
           <img src="../../../assets/images/list-ads.svg" alt="">
         </div>
