--- a/src/app/pages/add/add.page.html
+++ b/src/app/pages/add/add.page.html
@@ -3,9 +3,9 @@
     <ion-button slot="start" (click)="back()">
       <img src="../../../assets/images/back2.svg" alt="">
     </ion-button>
-    <ion-button slot="end">
+    <!-- <ion-button slot="end">
       <img src="../../../assets/images/share.svg" alt="">
-    </ion-button>
+    </ion-button> -->
   </div>
   <swiper #mySlide dir="rtl" [pagination]="{
     type: 'fraction'
