--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,14 +20,15 @@
 
     <div class="search animate__animated animate__fadeInBottomLeft fast">
       <img slot="start" src="../../assets/images/search.png">
-      <input type="search" name="search" id="" placeholder="المدينة , الحي أو الشارع">
+      <ion-input [(ngModel)]="searchQuery" (ionChange)="onSearchChange($event)" type="search" name="search" id=""
+        placeholder="المدينة , الحي أو الشارع"></ion-input>
       <img slot="end" class="filter" src="../../assets/images/filter_.png" alt="">
     </div>
 
     <div class="categories">
       <div class="row">
         <div *ngFor="let type of buildTypes" class="category animate__animated animate__fadeInBottomLeft duration"
-          (click)="details(type)">
+          (click)="detailsType(type)">
           <div class="overflow"></div>
           <img [src]="type?.image" alt="">
           <div class="content">
@@ -38,16 +39,16 @@
       </div>
     </div>
 
-    <div class="item_head animate__animated animate__fadeInBottomLeft fast">
+    <!-- <div class="item_head animate__animated animate__fadeInBottomLeft fast">
       <h2>عقارات مميزة</h2>
       <div class="end_head">
         <p> المزيد</p>
         <img src="../../assets/images/arrow_more.svg" alt="">
       </div>
-    </div>
+    </div> -->
   </div>
 
-  <swiper dir="rtl" [slidesPerView]="4/3" [spaceBetween]="20" [freeMode]="true" [breakpoints]="{
+  <!-- <swiper dir="rtl" [slidesPerView]="4/3" [spaceBetween]="20" [freeMode]="true" [breakpoints]="{
       '640': {
         slidesPerView: 2.5,
         spaceBetween: 20
@@ -201,116 +202,72 @@
         </div>
       </div>
     </ng-template>
-  </swiper>
+  </swiper> -->
   <div class="container">
     <div class="item_head animate__animated animate__fadeInUp fast">
       <h2>مضاف حديثا</h2>
     </div>
 
-    <div class="add_box_item item_head animate__animated animate__fadeInUp duration">
+
+    <div *ngFor="let build of builds;let i = index;trackBy:trackFu"
+      class="add_box_item animate__animated animate__fadeInUp duration" (click)="detailsBuild(build)">
       <div class="head_box">
-        <span>مميز</span>
-        <img src="../../assets/images/img_card1.png" alt="">
+        <span>{{build?.adType?.name}}</span>
+        <img [src]="build?.images[0] ?? '../../../assets/images/buildplaceholder.png'" alt="">
       </div>
       <div class="body_content">
         <div class="body_head">
           <p>
             <ion-icon slot="start" name="location"></ion-icon>
-            بغداد/شارع التحرير
+            {{build?.address}}
           </p>
-          <p>يناير 2021</p>
+          <p>{{build?.createdAt| date}}</p>
         </div>
-        <p class="body_title">
-          شقة مفروشة بحي بغداد
-        </p>
-        <div class="price">
-          1315 د.ع
+        <div class="center_content">
+          <p class="body_title">
+            {{build?.title}}
+          </p>
+          <div class="price">
+            {{build?.price |number}} د.ع
+          </div>
         </div>
         <div class="footer_content">
           <p>
             <img src="../../assets/images/size.svg" alt="">
-            210م2
+            {{build?.area}}م
           </p>
-          <p>
+          <p *ngIf="build?.bedsNumber">
             <img src="../../assets/images/bed.svg" alt="">
-            3
+            {{build?.bedsNumber}}
           </p>
           <p>
             <img src="../../assets/images/bath_room.svg" alt="">
-            2
+            {{build?.bathroomNumber}}
           </p>
         </div>
       </div>
     </div>
-    <div class="add_box_item  animate__animated animate__fadeInUp duration">
-      <div class="head_box">
-        <span>مميز</span>
-        <img src="../../assets/images/img_card1.png" alt="">
-      </div>
-      <div class="body_content">
-        <div class="body_head">
-          <p>
-            <ion-icon slot="start" name="location"></ion-icon>
-            بغداد/شارع التحرير
-          </p>
-          <p>يناير 2021</p>
-        </div>
-        <p class="body_title">
-          شقة مفروشة بحي بغداد
-        </p>
-        <div class="price">
-          1315 د.ع
-        </div>
-        <div class="footer_content">
-          <p>
-            <img src="../../assets/images/size.svg" alt="">
-            210م2
-          </p>
-          <p>
-            <img src="../../assets/images/bed.svg" alt="">
-            3
-          </p>
-          <p>
-            <img src="../../assets/images/bath_room.svg" alt="">
-            2
-          </p>
-        </div>
-      </div>
+  </div>
+  <!-- error View && Loading  -->
+  <div *ngIf="loading" class="loading">
+    <ion-spinner></ion-spinner>
+  </div>
+
+  <div *ngIf="emptyView" class="error-view">
+    <div class="content">
+      <ion-icon name="happy-outline"></ion-icon>
+      <ion-text color="medium">
+        <p>لا يوجد اعلانات حاليا</p>
+      </ion-text>
     </div>
-    <div class="add_box_item animate__animated animate__fadeInUp duration">
-      <div class="head_box">
-        <span>مميز</span>
-        <img src="../../assets/images/img_card1.png" alt="">
-      </div>
-      <div class="body_content">
-        <div class="body_head">
-          <p>
-            <ion-icon slot="start" name="location"></ion-icon>
-            بغداد/شارع التحرير
-          </p>
-          <p>يناير 2021</p>
-        </div>
-        <p class="body_title">
-          شقة مفروشة بحي بغداد
-        </p>
-        <div class="price">
-          1315 د.ع
-        </div>
-        <div class="footer_content">
-          <p>
-            <img src="../../assets/images/size.svg" alt="">
-            210م2
-          </p>
-          <p>
-            <img src="../../assets/images/bed.svg" alt="">
-            3
-          </p>
-          <p>
-            <img src="../../assets/images/bath_room.svg" alt="">
-            2
-          </p>
-        </div>
-      </div>
+  </div>
+
+  <div *ngIf="errorView" class="error-view">
+    <div class="content">
+      <ion-icon name="alert-circle-outline"></ion-icon>
+      <ion-text color="medium">
+        <p>خطأ بالشبكة يرجي المحاولة لاحقاً</p>
+      </ion-text>
     </div>
   </div>
 
