--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -8,7 +8,8 @@
 
   <div class="body_content">
     <ion-avatar class="animate__animated animate__fadeInBottomLeft duration">
-      <img src="../../assets/images/userplaceholder.png" />
+      <img [lazyLoad]="userImage ||'../../../assets/images/userplaceholder.png'"
+        [errorImage]="'../../../assets/images/userplaceholder.png'" alt="">
     </ion-avatar>
     <div class="info animate__animated animate__fadeInBottomLeft duration">
       <h1>{{userData?.fullName || '. . . . . .'}}</h1>
@@ -16,50 +17,50 @@
     </div>
 
 
-    <div class="list">
-      <div class="item_box animate__animated animate__fadeInBottomLeft duration">
-        <div class="image">
-          <img src="../../../assets/images/profile.svg" alt="">
-        </div>
-        <div class="name">
-          المعلومات الشخصية
-        </div>
+    <!-- <div class="list"> -->
+    <div class="item_box animate__animated animate__fadeInBottomLeft duration" (click)="navigate('me')">
+      <div class="image">
+        <img src="../../../assets/images/profile.svg" alt="">
       </div>
-
-      <div class="item_box animate__animated animate__fadeInBottomLeft duration" (click)="navigate()">
-        <div class="image">
-          <img src="../../../assets/images/list-ads.svg" alt="">
-        </div>
-        <div class="name">
-          إعلاناتي
-        </div>
-      </div>
-
-      <div class="item_box animate__animated animate__fadeInBottomLeft duration">
-        <div class="image">
-          <img src="../../../assets/images/like-list.svg" alt="">
-        </div>
-        <div class="name">
-          رغباتي
-        </div>
-      </div>
-
-      <div class="item_box animate__animated animate__fadeInBottomLeft duration">
-        <div class="image">
-          <img src="../../../assets/images/connect.svg" alt="">
-        </div>
-        <div class="name">
-          تواصل مع الدعم
-        </div>
-      </div>
-      <div class="item_box animate__animated animate__fadeInBottomLeft duration">
-        <div class="image">
-          <img src="../../../assets/images/out.svg" alt="">
-        </div>
-        <div class="name">
-          تسجيل الخروج
-        </div>
+      <div class="name">
+        المعلومات الشخصية
       </div>
     </div>
+
+    <div class="item_box animate__animated animate__fadeInBottomLeft duration" (click)="navigate('myadds')">
+      <div class="image">
+        <img src="../../../assets/images/list-ads.svg" alt="">
+      </div>
+      <div class="name">
+        إعلاناتي
+      </div>
+    </div>
+
+    <div class="item_box animate__animated animate__fadeInBottomLeft duration">
+      <div class="image">
+        <img src="../../../assets/images/like-list.svg" alt="">
+      </div>
+      <div class="name">
+        رغباتي
+      </div>
+    </div>
+
+    <div class="item_box animate__animated animate__fadeInBottomLeft duration">
+      <div class="image">
+        <img src="../../../assets/images/connect.svg" alt="">
+      </div>
+      <div class="name">
+        تواصل مع الدعم
+      </div>
+    </div>
+    <div class="item_box animate__animated animate__fadeInBottomLeft duration">
+      <div class="image">
+        <img src="../../../assets/images/out.svg" alt="">
+      </div>
+      <div class="name">
+        تسجيل الخروج
+      </div>
+    </div>
+    <!-- </div> -->
   </div>
 </ion-content>
