--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -12,7 +12,8 @@ ion-header {
     ion-avatar {
       width: 40px;
       height: 40px;
-      margin-inline-end: 16px;
+      margin: 16px 0 0 16px;
+      // margin-block-start: 16px;
     }
   }
 }
