--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,7 +23,7 @@
       <img slot="start" src="../../assets/images/search.png">
       <ion-input [(ngModel)]="searchQuery" (ionChange)="onSearchChange($event)" type="search" name="search" id=""
         placeholder="المدينة , الحي أو الشارع"></ion-input>
-      <img slot="end" class="filter" src="../../assets/images/filter_.png" alt="">
+      <img slot="end" class="filter" src="../../assets/images/filter_.png" alt="" (click)="filter()">
     </div>
 
     <div class="categories">
@@ -288,4 +288,55 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+  <ion-infinite-scroll threshold="25%" [disabled]="disableInfinity" position="bottom" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+  <ion-modal #modal mode="ios" trigger="open-modal" [initialBreakpoint]="0.35"
+    [breakpoints]="[0, 0.25,0.35, 0.5, 0.75]">
+    <ng-template>
+      <ion-content>
+        <div class="headerModalFilter">
+          <h1 class="title_category animate__animated animate__fadeInUp duration">التصنيف</h1>
+          <ion-button (click)="clearFilter()" fill="clear" shape="round">
+            الغاء
+          </ion-button>
+        </div>
+        <div class="filter_body">
+          <p>المحافظة</p>
+          <div class="item_box">
+            <ion-select mode="ios" placeholder="الشقق" [(ngModel)]="city">
+              <ion-select-option *ngFor="let city of citys" [value]="city._id">{{city.name}}</ion-select-option>
+            </ion-select>
+          </div>
+
+          <p>جنس السند</p>
+          <div class="item_box">
+            <ion-select mode="ios" placeholder="الشقق" [(ngModel)]="bondType">
+              <ion-select-option *ngFor="let type of bondTypes" [value]="type._id">{{type.name}}</ion-select-option>
+            </ion-select>
+          </div>
+
+
+          <p>جنس الاعلان</p>
+          <div class="item_box">
+            <ion-select mode="ios" placeholder="الشقق" [(ngModel)]="adGender">
+              <ion-select-option *ngFor="let type of adGenders" [value]="type._id">{{type.name}}</ion-select-option>
+            </ion-select>
+          </div>
+
+          <p>نوع الاعلان</p>
+          <div class="item_box">
+            <ion-select mode="ios" placeholder="الشقق" [(ngModel)]="adType">
+              <ion-select-option *ngFor="let type of adTypes" [value]="type._id">{{type.name}}</ion-select-option>
+            </ion-select>
+          </div>
+
+          <ion-button expand="block" fill="solid" (click)="getBuilds();filterModal.dismiss()">
+            تصنيف
+          </ion-button>
+        </div>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
