call and mesage

--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -30,7 +30,7 @@
       <p slot="end">{{build?.createdAt |date}}</p>
     </div>
     <p class="price">{{build?.price}} د.ع</p>
-    <div class="location">
+    <div class="location" *ngIf="build?.location">
       <div class="img">
         <img src="../../../assets/images/map_i.svg" alt="">
       </div>
@@ -38,7 +38,7 @@
         <p>الموقع</p>
         <p>{{build?.address}}</p>
       </div>
-      <div class="map">
+      <div class="map" (click)="openMap()">
         <img src="../../../assets/images/map_i.svg" alt="">
       </div>
     </div>
@@ -87,11 +87,11 @@
 </ion-content>
 <div class="myFooter">
   <ion-buttons>
-    <ion-button>
+    <ion-button [disabled]="!build?.whatsapp" (click)="whatsapp(build.phoneCall)">
       <img src="../../../assets/images/msg.svg" alt="">
       مراسلة
     </ion-button>
-    <ion-button>
+    <ion-button [disabled]="!build?.phoneCall" (click)="call(build.phoneCall)">
       <img src="../../../assets/images/call.svg" alt="">
       إتصال
     </ion-button>
