--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -11,7 +11,7 @@
         <ion-button expand="block" fill="clear" (click)="navigate('login')">
           تسجيل الدخول
         </ion-button>
-        <ion-button expand="block" fill="solid" (click)="navigate('register')">
+        <ion-button expand="block" fill="solid" (click)="navigate('otp')">
           حساب جديد
         </ion-button>
         <p class="guest" (click)="loginAsVisitor()">
