--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -10,21 +10,25 @@
   margin: auto;
   max-width: 768px;
   height: 100%;
-  background-image: url('../../../assets/images/loginimg.png');
+  // background-image: url('../../../assets/images/loginimg.png');
   background-size: cover;
 
 }
 
-.content {
-  width: 100%;
-  margin: auto;
-  text-align: center;
-  padding-top: 20%;
+.header_box {
+  margin-top: 26px;
+
+  h1 {
+    color: var(--dark-text);
+    font-size: 32px;
+    font-family: 'bold';
+    margin-block: 24px;
+  }
 
   .backBtn {
-    position: absolute;
-    right: 0;
-    top: 0px;
+    // position: absolute;
+    // right: 0;
+    // top: 0px;
     border: 1px solid;
     --border-radius: 50%;
     border-radius: 50%;
@@ -33,41 +37,51 @@
     height: 40px;
     width: 40px;
   }
-
-  img.logo {
-    display: block;
-    margin: auto;
-    background-color: rgba(255, 255, 255, .35);
-    border-radius: 10px;
-    width: 80px;
-    height: 80px;
-  }
-
-  h2 {
-    font-size: 24px;
-    font-family: 'bold';
-    line-height: 29px;
-    margin-block: 16px 26px;
-    color: var(--ion-color-primary);
-  }
-
-  h5 {
-    font-size: 24px;
-    line-height: 34px;
-    color: var(--dark-text);
-    font-family: 'bold';
-    margin-bottom: 0;
-  }
-
 }
 
-ion-item {
-  border: 1px solid #87899E;
-  border-radius: 28px;
-  margin-bottom: 16px;
+// .content {
+//   width: 100%;
+//   margin: auto;
+//   text-align: center;
+//   padding-top: 20%;
 
-  ion-label {
-    width: 20%;
+//   img.logo {
+//     display: block;
+//     margin: auto;
+//     background-color: rgba(255, 255, 255, .35);
+//     border-radius: 10px;
+//     width: 80px;
+//     height: 80px;
+//   }
+
+//   h2 {
+//     font-size: 24px;
+//     font-family: 'bold';
+//     line-height: 29px;
+//     margin-block: 16px 26px;
+//     color: var(--ion-color-primary);
+//   }
+
+//   h5 {
+//     font-size: 24px;
+//     line-height: 34px;
+//     color: var(--dark-text);
+//     font-family: 'bold';
+//     margin-bottom: 0;
+//   }
+
+// }
+
+.item_box {
+
+  ion-item {
+    border: 1px solid #87899E;
+    border-radius: 28px;
+    margin-bottom: 16px;
+
+    ion-label {
+      width: 20%;
+    }
   }
 }
 
@@ -91,8 +105,8 @@ ion-button.submit {
   .selectionBox {
     padding: 12px 16px;
     border: 1px solid #87899E;
-    border-radius: 8px;
-    width: 35%;
+    border-radius: 32px;
+    width: 45%;
     text-align: center;
     font-family: 'bold';
     color: #87899E;
@@ -103,4 +117,13 @@ ion-button.submit {
     color: var(--ion-color-primary) !important;
     background: #2a6fdb26;
   }
+}
+
+form {
+  p.item_title {
+    margin-block: 12px;
+    font-family: 'bold';
+    color: var(--light-text);
+  }
+
 }
